# elemetry

./: README.md  elemetryClient.sln
elemetryClient/: CMakeLists.txt  README.md  SharedDefs.h  build.bat  copy_debug_dlls.bat  driver.cpp  driver.h  elemetry.h  elemetryClient.cpp  elemetryClient.h  elemetryClient.vcxproj  elemetryClient.vcxproj.filters  enumerators.cpp  enumerators.h  pages.cpp  pages.h  run.bat  symbols.cpp  symbols.h  utils.cpp  utils.h
elemetryDriver/: Common.h  DbgHelpCallbacks.cpp  DbgHelpCallbacks.h  README.md  build_and_sign.bat  callbacks.cpp  callbacks.h  elemetryDriver.cpp  elemetryDriver.def  elemetryDriver.vcxproj  enumerators.cpp  enumerators.h  memory.cpp  memory.h  modules.cpp  modules.h  sign_driver.bat
testDriver/: WDK.props  makefile  sources  testDriver.c  testDriver.h  testDriver.sln  testDriver.vcxproj
